--- a/yatube/templates/includes/form.html
+++ b/yatube/templates/includes/form.html
@@ -1,4 +1,4 @@
-{% load user_filters %}
+{% load static %}
 {% if form.errors %}
     {% for field in form %}
       {% for error in field.errors %}            
