--- a/yatube/templates/core/403.html
+++ b/yatube/templates/core/403.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}Error 403{% endblock %}
 {% block content %}
-  <h1>Custom 403</h1>
-{% endblock %}
+  <h1>Ошибка 403</h1>
+  <p>Ошибка доступа (403) Доступ запрещён</p>
+  <a href="{% url 'posts:index' %}">Идите на главную</a>
+{% endblock %} 
