--- a/yatube/templates/core/403csrf.html
+++ b/yatube/templates/core/403csrf.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}Error 403csrf{% endblock %}
 {% block content %}
-  <h1>Custom CSRF check error. 403</h1>
-{% endblock %}
+  <h1>Ошибка 403csrf</h1>
+  <p>Ошибка доступа (403) Ошибка проверки CSRF. Запрос отклонён</p>
+  <a href="{% url 'posts:index' %}">Идите на главную</a>
+{% endblock %} 
