--- a/yatube/templates/core/500.html
+++ b/yatube/templates/core/500.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Custom 500{% endblock %}
+{% block title %}Error 500{% endblock %}
 {% block content %}
-  <h1>Custom 500</h1>
+  <h1>Ошибка 500</h1>
+  <p>Серверу не удаётся обработать страницу {{ path }}</p>
+  <a href="{% url 'posts:index' %}">Идите на главную</a>
 {% endblock %} 
