--- a/yatube/templates/includes/post.html
+++ b/yatube/templates/includes/post.html
@@ -3,7 +3,7 @@
   <ul>
     {% if profile_link and post.author  %}
     <li>
-      Автор: {% if post.author.get_full_name %}{{ post.author.get_full_name }}{% else %}{{ post.author }}{% endif %} <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
+      Автор: {{ post.author.get_full_name }} <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
     </li>
     {% endif %}
     <li> 
