--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,47 +1,50 @@
 {% extends 'base.html' %}
+{% block header %}
+  {{ post.text|truncatechars:30 }}
+{% endblock %}
 {% block title %}
-  {{ title }}
+  {{ post.text|truncatechars:30 }}
 {% endblock %}
 {% block content %}
 {% load thumbnail %}
 {% load user_filters %}
-  <main>
-    <div class="row">
-      <aside class="col-12 col-md-3">
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">
-            Дата публикации: {{ post.pub_date|date:"d E Y" }} 
-          </li>
-          <li class="list-group-item">
-            {% if post.group %}
-              <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-            {% endif %}
-          </li>
-          <li class="list-group-item">
-            Автор: {% if post.author.get_full_name %}{{ post.author.get_full_name }}
-            {% else %}
+  <div class="row">
+    <aside class="col-12 col-md-3">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          Дата публикации: {{ post.pub_date|date:"d E Y" }} 
+        </li>
+        <li class="list-group-item">
+          {% if post.group %}
+            <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+          {% endif %}
+        </li>
+        <li class="list-group-item">
+            Автор: {% if post.author %}{{ post.author.get_full_name }}
+          {% else %}
             {{ post.author }}
-            {% endif %}
-            <li class="list-group-item">
-              <a href="{% url 'posts:profile' post.author %}">
-              все посты пользователя</a>
-            </li> 
-          </li>
-        </ul>
-      </aside>
-      <article class="col-12 col-md-9">
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        <p>{{ post.text }}</p>
-        <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
-          редактировать запись
-        </a>
-      </article>
-    </div>
-    {% if user.is_authenticated %}
-      <div class="card my-4">
-        <h5 class="card-header">Добавить комментарий:</h5>
+          {% endif %}
+        <li class="list-group-item">
+          <a href="{% url 'posts:profile' post.author %}">
+          все посты пользователя</a>
+        </li> 
+      </ul>
+    </aside>
+    <article class="col-12 col-md-9">
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
+      <p>{{ post.text }}</p>
+      {% if request_user and post.author and request_user == post.author %}
+      <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
+        редактировать запись
+      </a>
+      {% endif %}
+    </article>
+  </div>
+  {% if user.is_authenticated %}
+    <div class="card my-4">
+      <h5 class="card-header">Добавить комментарий:</h5>
         <div class="card-body">
           <form method="post" action="{% url 'posts:add_comment' post.id %}">
             {% csrf_token %}      
@@ -51,21 +54,20 @@
             <button type="submit" class="btn btn-primary">Отправить</button>
           </form>
         </div>
+    </div>
+  {% endif %}
+  {% for comment in comments %}
+    <div class="media mb-4">
+      <div class="media-body">
+        <h5 class="mt-0">
+          <a href="{% url 'posts:profile' comment.author.username %}">
+            {{ comment.author.username }}
+          </a>
+        </h5>
+        <p>
+          {{ comment.text }}
+        </p>
       </div>
-    {% endif %}
-    {% for comment in comments %}
-      <div class="media mb-4">
-        <div class="media-body">
-          <h5 class="mt-0">
-            <a href="{% url 'posts:profile' comment.author.username %}">
-              {{ comment.author.username }}
-            </a>
-          </h5>
-          <p>
-            {{ comment.text }}
-          </p>
-        </div>
-      </div>
-    {% endfor %}
-  </main>
+    </div>
+  {% endfor %}
 {% endblock content %}
