--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -4,8 +4,8 @@
 {% block title %}Подписки на авторов Yatube{% endblock %}
 {% block header %}Подписки на авторов Yatube{% endblock %}
 {% block content %}
-  {% cache 20 follow_page with page_obj %}
-    {% include 'posts/includes/switcher.html' %}
+  {% cache 20 follow_page with page_obj.number %}
+    {% include 'posts/includes/switcher.html' with follow=True %} 
     {% for post in page_obj %} 
       {% include 'includes/post.html' with group_link=True profile_link=True %}
     {% endfor %} 
