--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -4,8 +4,8 @@
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block header %}Последние обновления на сайте{% endblock %}
 {% block content %}
-  {% cache 20 index_page with page_obj %}
-    {% include 'posts/includes/switcher.html' %}
+  {% cache 20 index_page page_obj.number %}
+    {% include 'posts/includes/switcher.html' with index=True %}
     {% for post in page_obj %} 
       {% include 'includes/post.html' with group_link=True profile_link=True %}
     {% endfor %}
